--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
                 <img style='width:330px;' src='qr-steps.jpg'/>
             </div>
             <div class='cols'>
-                <br/>
-                <button class="button primary" onclick="navToManualEnterPage()" type="button" >Do not have linked App? Click here</button>
+                <br/><br/>
+                <button class="button primary" onclick="navToManualEnterPage()" type="button" >Do not have linked App? <br /> Click here</button>
             </div>
             <br class='cb'>
             <div style='text-align: center;'>
@@ -449,6 +449,7 @@
              max-width: 350px;
              margi: 5px;
              float:left;
+             text-align:center;
          }
          .cb{
              clear:both
