--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
          
          function succesMsgOnsaveDetails() {
             setTimeout(function(){
-               alert('Thanks! You Profile infermation catpured Successfully. will keep in touch soon.');
+               alert('Thank you for the information, we look forward to meet you again soon!');
             },1000);
            
          }
