--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>Simple steps to Sign up for job alerts to get notified of open positions at Visa!            </p>
               <video id="preview" playsinline></video>
               <br/><br/>
-              <button class="button primary" style="width:320px" onclick="navToManualEnterPage()" type="button" >Do not have linked App? <br /> Click here</button>
+              <button class="button primary" style="width:320px" onclick="navToManualEnterPage()" type="button" >Do not have linkedIn App? <br /> Click here</button>
             </div>
             <div class='cols' style="text-align:right">
                 <img style='width:330px;' src='qr-steps.png'/>
